ajout commentaire + rapport